--- a/index.html
+++ b/index.html
@@ -3,32 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  </style> -->
 </head>
 <body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
+<div class="card">
+  <img src="assets/images/avatar-jessica.jpeg" alt="assets/images/avatar-jessica.jpeg" class="card-image">
+  <div class="card-profile">
+    <h1 class="card-profile-name">Jessica Randall</h1>
+    <p class="card-profile-location">London, United Kingdom</p>
+  </div>
+  <p class="card-caption">
+    "Front-end developer and avid reader."
+  </p>
+  <div class="card-link-hub">
+    <div class="link-item">
+      <p>GitHub</p>
+    </div>
+    <div class="link-item">
+      <p>Frontend Mentor</p>
+    </div>
+    <div class="link-item">
+      <p>LinkedIn</p>
+    </div>
+    <div class="link-item">
+      <p>Twitter</p>
+    </div>
+    <div class="link-item">
+      <p>Instagram</p>
+    </div>
+  </div>
+</div>
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
