--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 <div class="card">
   <img src="assets/images/avatar-jessica.jpeg" alt="assets/images/avatar-jessica.jpeg" class="card-image">
   <div class="card-profile">
-    <h1 class="card-profile-name">Jessica Randall</h1>
-    <p class="card-profile-location">London, United Kingdom</p>
+    <h1 class="card-profile-name">
+      Jessica Randall
+    </h1>
+    <p class="card-profile-location">
+      London, United Kingdom
+    </p>
   </div>
   <p class="card-caption">
     "Front-end developer and avid reader."
